// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SettingsProductsOverview > it mounts correctly 1`] = `
<settings-entities-overview-stub
  arecolsloading="false"
  arerowsclickable="true"
  caneditgroups="true"
  customviews=""
  entityname="product"
  filterconfiguration="[object Map]"
  footeroptions="[object Object]"
  groupdeletefn="[Function]"
  groupfields="name,local"
  groups="[object Object],[object Object]"
  hasgroupview="true"
  hideresetbtn="false"
  isdeletinggroupinprogress="false"
  items="[object Object],[object Object]"
  languagetextentity=""
  loading="false"
  menuitems=""
  namefield="name"
  navigatetoeditroute="true"
  openpanelsonfilter="true"
  overviewheader="products"
  primarybtntext="Product"
  saveactionname="saveProductGroup"
  secondarybtntext="Group"
  showdragicon="true"
  showemptygroups="true"
  showglobalgroupsicon="true"
  showgroupitemscount="true"
  statuskey="enabled"
  tableheaders="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
  togglebtnvalue="list"
  usebackendfiltering="false"
/>
`;

exports[`SettingsProductsOverview > it mounts correctly when all products are not loaded 1`] = `
<settings-entities-overview-stub
  arecolsloading="false"
  arerowsclickable="true"
  caneditgroups="true"
  customviews=""
  entityname="product"
  filterconfiguration="[object Map]"
  footeroptions="[object Object]"
  groupdeletefn="[Function]"
  groupfields="name,local"
  groups="[object Object],[object Object]"
  hasgroupview="true"
  hideresetbtn="false"
  isdeletinggroupinprogress="false"
  items="[object Object],[object Object]"
  languagetextentity=""
  loading="false"
  menuitems=""
  namefield="name"
  navigatetoeditroute="true"
  openpanelsonfilter="false"
  overviewheader="products"
  primarybtntext="Product"
  saveactionname="saveProductGroup"
  secondarybtntext="Group"
  showdragicon="true"
  showemptygroups="true"
  showglobalgroupsicon="true"
  showgroupitemscount="false"
  statuskey="enabled"
  tableheaders="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
  togglebtnvalue="list"
  usebackendfiltering="false"
/>
`;

exports[`SettingsProductsOverview > it mounts correctly when import/export is enabled 1`] = `
<settings-entities-overview-stub
  arecolsloading="false"
  arerowsclickable="true"
  caneditgroups="true"
  customviews=""
  entityname="product"
  filterconfiguration="[object Map]"
  footeroptions="[object Object]"
  groupdeletefn="[Function]"
  groupfields="name,local"
  groups="[object Object],[object Object]"
  hasgroupview="true"
  hideresetbtn="false"
  isdeletinggroupinprogress="false"
  items="[object Object],[object Object]"
  languagetextentity=""
  loading="false"
  menuitems="[object Object]"
  namefield="name"
  navigatetoeditroute="true"
  openpanelsonfilter="true"
  overviewheader="products"
  primarybtntext="Product"
  saveactionname="saveProductGroup"
  secondarybtntext="Group"
  showdragicon="true"
  showemptygroups="true"
  showglobalgroupsicon="true"
  showgroupitemscount="true"
  statuskey="enabled"
  tableheaders="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
  togglebtnvalue="list"
  usebackendfiltering="false"
/>
`;

exports[`SettingsProductsOverview > it mounts empty view correctly 1`] = `
<settings-entities-overview-stub
  arecolsloading="false"
  arerowsclickable="true"
  caneditgroups="true"
  customviews=""
  entityname="product"
  filterconfiguration="[object Map]"
  footeroptions="[object Object]"
  groupdeletefn="[Function]"
  groupfields="name,local"
  groups="[object Object],[object Object]"
  hasgroupview="true"
  hideresetbtn="false"
  isdeletinggroupinprogress="false"
  items=""
  languagetextentity=""
  loading="false"
  menuitems=""
  namefield="name"
  navigatetoeditroute="true"
  openpanelsonfilter="true"
  overviewheader="products"
  primarybtntext="Product"
  saveactionname="saveProductGroup"
  secondarybtntext="Group"
  showdragicon="true"
  showemptygroups="true"
  showglobalgroupsicon="true"
  showgroupitemscount="true"
  statuskey="enabled"
  tableheaders="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
  togglebtnvalue="list"
  usebackendfiltering="false"
/>
`;

exports[`SettingsProductsOverview > mounts correctly if userHasGlobalGroupsIcon is false 1`] = `
<settings-entities-overview-stub
  arecolsloading="false"
  arerowsclickable="true"
  caneditgroups="true"
  customviews=""
  entityname="product"
  filterconfiguration="[object Map]"
  footeroptions="[object Object]"
  groupdeletefn="[Function]"
  groupfields="name,local"
  groups="[object Object],[object Object]"
  hasgroupview="true"
  hideresetbtn="false"
  isdeletinggroupinprogress="false"
  items="[object Object],[object Object]"
  languagetextentity=""
  loading="false"
  menuitems=""
  namefield="name"
  navigatetoeditroute="true"
  openpanelsonfilter="true"
  overviewheader="products"
  primarybtntext="Product"
  saveactionname="saveProductGroup"
  secondarybtntext="Group"
  showdragicon="true"
  showemptygroups="true"
  showglobalgroupsicon="false"
  showgroupitemscount="true"
  statuskey="enabled"
  tableheaders="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
  togglebtnvalue="list"
  usebackendfiltering="false"
/>
`;
